--- a/src/main/java/com/iglnierod/gamearchive/view/home/list/ListsPanel.form
+++ b/src/main/java/com/iglnierod/gamearchive/view/home/list/ListsPanel.form
@@ -42,23 +42,32 @@
           <Layout>
             <DimensionLayout dim="0">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" attributes="0">
-                      <EmptySpace min="20" pref="20" max="-2" attributes="0"/>
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace max="-2" attributes="0"/>
                       <Component id="createListPanel" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <Component id="favouriteListPanel" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace pref="856" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
             <DimensionLayout dim="1">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" attributes="0">
-                      <EmptySpace min="20" pref="20" max="-2" attributes="0"/>
-                      <Component id="createListPanel" min="-2" max="-2" attributes="0"/>
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="1" attributes="0">
+                          <Component id="favouriteListPanel" min="-2" max="-2" attributes="0"/>
+                          <Component id="createListPanel" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace pref="446" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
           </Layout>
           <SubComponents>
             <Component class="com.iglnierod.gamearchive.view.home.list.panel.CreateListPanel" name="createListPanel">
+            </Component>
+            <Component class="com.iglnierod.gamearchive.view.home.list.panel.FavouriteListPanel" name="favouriteListPanel">
             </Component>
           </SubComponents>
         </Container>
